--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \newpage
 
 \section{Git and GitHub}
+
 \subsection{Repository Initialization and Commits}
 \begin{enumerate}
     \item First I created a new repository by clicking the new button on the GitHub homepage.
@@ -28,6 +29,17 @@
     \item Created a basic \LaTeX{} file called \emph{main.tex}, added to git like before the pushed again. This time I created a new tag ``v.0.0.0'' and assigned it to the lastest commit by using this command ``git tag -a v0.0.0 \verb|<|HASHOFCOMMIT\verb|>|''.
     \item Now the repository is set. Every time I finish a subsection, I commit and push it with a new tag, then GitHub automatically complies this document.
 \end{enumerate}
+
+
+\subsection{GitHub Actions for LaTeX Compilation}
+To use a GitHub workflow you have to setup a .yml file and configure it your desires.
+\begin{enumerate}
+    \item Create a directory named ``.github'', by using ``mkdir .github'' command.
+    \item Create another directory inside that named ``workflows''.
+    \item Create a file name ``main.yml'' inside that by using ``touch main.yml''.
+    \item Configure your .yml file to your desires.
+\end{enumerate}
+My configuration compiles my \LaTeX{} document whenever I push something with the tag *.*.* (Where * is any sequence of characters).
 
 
 
