finished for good!

--- a/main.tex
+++ b/main.tex
@@ -74,6 +74,15 @@ Valgrind is a programming tool for memory debugging, memory leak detection, and 
 \subsubsection{Opening the file using Zathura}
 Zathura's handy syntax let us execute the following command: \newline``zathura \$(find / -type f -iname "*.PDF")''.
 
+\newpage
+
+\section{Git and FOSS}
+\subsection{Issues}
+\begin{figure}
+    \centering
+    \includegraphics{issues.png}
+    \caption{screenshot of my issue}
+\end{figure}
 
 \end{document}
 
