finished for good!

--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@ Zathura's handy syntax let us execute the following command: \newline``zathura \
 \subsection{Issues}
 \begin{figure}
     \centering
-    \includegraphics{issues.png}
+    \includegraphics{Screenshot 2024-01-27 225143.png}
     \caption{screenshot of my issue}
 \end{figure}
 
