fixed screenshot error

--- a/main.tex
+++ b/main.tex
@@ -78,6 +78,8 @@ Zathura's handy syntax let us execute the following command: \newline``zathura \
 
 \section{Git and FOSS}
 \subsection{Issues}
+\newline
+
 \begin{figure}
     \centering
     \includegraphics{Screenshot 2024-01-27 225143.png}
