fixed screenshot error for good!

--- a/main.tex
+++ b/main.tex
@@ -78,11 +78,10 @@ Zathura's handy syntax let us execute the following command: \newline``zathura \
 
 \section{Git and FOSS}
 \subsection{Issues}
-\newline
 
-\begin{figure}
+\begin{figure}[!h]
     \centering
-    \includegraphics{Screenshot 2024-01-27 225143.png}
+    \includegraphics[width=1\textwidth]{Screenshot 2024-01-27 225143.png}
     \caption{screenshot of my issue}
 \end{figure}
 
